<resources>
    <string name="app_name">MyWork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="if_you_don_t_receive_a_code">If you don\'t receive a code!</string>
    <string name="verify">Verify</string>
    <string name="title_activity_list_wallpaper">ListWallpaper</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_your_mobile_number_to_create_account">Enter your mobile number to create account</string>
    <string name="signt">Sign in to My Work</string>
    <string name="signupt">Sign up to Reflection</string>
    <string name="signpass">Password</string>
    <string name="signemail">Email</string>
    <string name="signname">Name</string>
    <string name="forgot">Forgot your password?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign up</string>
    <string name="designation">Designation…</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="choosesub">Which course was assigned for you?</string>
    <string name="title">Title</string>
    <string name="share_with_your_class">Share with your class</string>
    <string name="your_work">Your Work</string>
    <string name="yourwork" />
    <string name="already_registered">Already Registered?</string>
    <string name="phone">phone number</string>
    <string name="send">Send</string>
</resources>